--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ numpy==1.23.5
 pandas==2.0.3 
 matplotlib==3.2.1
 torch==2.3.1
-chronos==1.2.0
+git+https://github.com/amazon-science/chronos-forecasting.git
